[package]
name = "cask"
version = "0.1.0"
authors = ["Andre Silva"]
description = "A fast key-value store backed by a log-structured hash table"
repository = "https://github.com/andrebeat/cask"
readme = "README.md"
license = "MIT"
keywords = ["database"]

[dependencies]
byteorder = "0.5.1"
fs2 = "0.2.4"
lazy_static = "0.2.1"
log = "0.3"
regex = "0.1"
xxhash2 = "0.1"

[dev-dependencies]
env_logger = "0.3"
rand = "0.3"
time = "0.1.35"
