[package]
name = "cask"
version = "0.4.0"
authors = ["Andre Silva"]
description = "A fast key-value store backed by a log-structured hash table"
repository = "https://github.com/andrebeat/cask"
readme = "README.md"
license = "MIT"
keywords = ["database", "db", "key-value", "kv"]

[dependencies]
byteorder = "~1.0.0"
fs2 = "~0.4.1"
lazy_static = "~0.2.8"
log = "~0.3.7"
regex = "~0.2.1"
xxhash2 = "~0.1.0"
clippy = {version = "*", optional = true}

[dev-dependencies]
env_logger = "~0.4.2"
rand = "~0.3.15"
time = "~0.1.37"

[features]
default = []